--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
 </head>
 <body>
     <div id="root"></div> <!-- A container div where React will render its components -->
-
-    <!-- CDN LINK added to inject React -->
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script> <!-- Link to React development version -->
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> <!-- Link to ReactDOM development version -->
-
     <!-- Load your app.js script -->
-    <script src="app.js"></script>
+    <script src="./app.js" type="module"></script>
 </body>
 </html>
